--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <Li>git clone path-to-repository</Li>
     <li>git status - статус текущего репозитроий</li>
     <li>git add path-to-file - добавить новый файл под контроль ГИТА</li>
-    <li>git commit -am "added new file index.html"</li>
+    <li>git commit -am "added new file index.html" -зафикцировать изменения и дать комментарий </li>
+    <li>git push - отправить все закомичинные изменения в репозиторий на сервер</li>
+    <li>git pull - забрать свежие обновления</li>
+
   </ul>
 </div>
